[package]
name = "imgui-filedialog"
version = "0.2.0"
edition = "2018"
authors = ["Ben Dickson", "Marius Metzger"]
repository = "https://github.com/dbr/imgui-filedialog-rs"
description = "Rust bindings to https://github.com/aiekick/ImGuiFileDialog/"
license = "MIT"
categories = ["gui", "api-bindings"]
readme = "README.md"

[features]
default = []

[dependencies]
bevy_reflect = { version = "0.16.1", optional = true } # derive[Reflect] on structs

imgui-filedialog-sys = { version = "0.2.0", path = "imgui-filedialog-sys" }
imgui = "0.12.0"
mint = "0.5.6" # matches imgui's mint version

[workspace]
members = [
    "imgui-filedialog-sys",
    "imgui-filedialog-sys-bindgen",
    "imgui-filedialog-examples",
]
