[package]
name = "imgui-filedialog-sys"
version = "0.2.0"
edition = "2018"
authors = ["Ben Dickson", "Marius Metzger"]
description = "Raw FFI bindings to ImGuiFileDialog"
license = "MIT"
categories = ["gui", "external-ffi-bindings"]
build = "build.rs"
links = "ImGuiFileDialog"

[dependencies]
imgui-sys = "0.12.0"

[build-dependencies]
cc = "1.0"
